added why choose us section

--- a/index.html
+++ b/index.html
@@ -104,19 +104,28 @@
 </section>
 <section class="why-chose-us">
     <div class="why-contain">
-        <h2>Why Choose Us</h2>
+        <h1>Why Choose Us</h1>
         <p>Your Destination Travel Service has creative, zealous, and  specialists. <br> We plan travel solutions your travel needs</p>
     </div>
     
-    <div class="contain-item-one">
-        <img src="Images/" alt="">
-        <h2>Handpicked Hotels</h2>
-        <p>Your Destination Travel Service has creative, zealous, and  specialists. <br> We plan travel solutions your travel needs</p>
+    <div class="why-items-container">
+        <div class="contain-item-one">
+            <img src="Images/" alt="">
+            <h2 class="why-tittle">Handpicked Hotels</h2>
+            <p>Your Destination Travel Service has creative, zealous, and  specialists. <br> We plan travel solutions your travel needs</p>
+        </div>
+        <div class="contain-item-two">
+            <img src="Images/" alt="">
+            <h2  class="why-tittle">World Class Service</h2>
+            <p>Your Destination Travel Service has creative, zealous, and  specialists. <br> We plan travel solutions your travel needs</p>
+        </div>
     </div>
-    <div class="contain-item-two">
-        <img src="Images/" alt="">
-        <h2>Handpicked Hotels</h2>
-        <p>Your Destination Travel Service has creative, zealous, and  specialists. <br> We plan travel solutions your travel needs</p>
+    <div class="why-items-container-two">
+        <div class="contain-item-three">
+            <img src="Images/" alt="">
+            <h2 class="why-tittle">Best Price Guarantee</h2>
+            <p>Your Destination Travel Service has creative, zealous, and  specialists. <br> We plan travel solutions your travel needs</p>
+        </div>
     </div>
 </section>
     </main>
