added newsletter and reponsive it

--- a/index.html
+++ b/index.html
@@ -128,6 +128,24 @@
         </div>
     </div>
 </section>
+
+<section class="newsletter-container">
+<div class="newsletter-items">
+    <h3> Newsletter</h3>
+    <p>Your Destination Travel Service has creative, zealous, and  specialists. </p>
+    <hr>
+     <input type="text" placeholder="Enter your name"><br>
+     <input type="email" name="" id="" placeholder="Enter your email"><br>
+     <button class="Newsletter-btn">subscribe</button>
+</div>
+<div class="newsletter-img">
+    <div class="top">
+        <h5>Travel.com</h5>
+        <h3 class="save">Save up to 70%</h3>
+    </div>
+</div>
+</section>
+
     </main>
     <footer>
 
